--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/Negan1911/gulp-versioning#readme",
   "dependencies": {
     "gulp-util": "^3.0.7",
+    "simple-git": "^1.48.0",
     "through2": "^2.0.1"
   }
 }
