--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   },
   "homepage": "https://github.com/Negan1911/gulp-versioning#readme",
   "dependencies": {
+    "bufferstreams": "^1.1.1",
     "gulp-util": "^3.0.7",
     "simple-git": "^1.48.0",
-    "through2": "^2.0.1"
+    "through2": "^2.0.1",
+    "vinyl-sourcemaps-apply": "^0.2.1"
   }
 }
